--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
 </head>
 <body>
     <header>
-        <span>Main picture</span>
+        <div class="container__phones">
+            <span class="phones">Main picture</span>
+        </div>
+        
     </header>
     <section class="hero">
-        <h1 class="hero__tittle">Next generation digital banking</h1>
-        <p class="hero__text">Take your financial life online. Your easy bank account will be a one-stop-shop for spending. saving, budgeting, investing, and much more</p>
-        <a href="#" class="button">Request Invite</a>
+        <div class="wrapper">
+            <h1 class="hero__tittle">Next generation digital banking</h1>
+            <p class="hero__text">Take your financial life online. Your easy bank account will be a one-stop-shop for spending. saving, budgeting, investing, and much more</p>
+            <a href="#" class="button">Request Invite</a>
+        </div>
     </section>
 </body>
 </html>
