--- a/index.html
+++ b/index.html
@@ -10,18 +10,43 @@
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div class="container__phones">
-            <span class="phones">Main picture</span>
+    <header class="header">
+        <div class="header-container">
+            <img src="./images/logo.svg" alt="Logo Easy bank">
+            <nav class="header-menu"></nav>
         </div>
-        
+        <div class="header-background"></div>
     </header>
-    <section class="hero">
-        <div class="wrapper">
+        <section class="hero">
             <h1 class="hero__tittle">Next generation digital banking</h1>
             <p class="hero__text">Take your financial life online. Your easy bank account will be a one-stop-shop for spending. saving, budgeting, investing, and much more</p>
             <a href="#" class="button">Request Invite</a>
-        </div>
-    </section>
+        </section>
+        <main class="features">
+           <articule class="feature__main_tittle">
+               <h2>Why choose Easy Bank?</h2>
+               <p>We leverage Open Banking to turn your bank account into yout financial hub. COntrol your finances like never before</p>
+           </articule>
+           <articule class="feature__box">
+               <span></span>
+               <h1>Online Banking</h1>
+               <p>Our modern web and mobile applications allow you keep track of your finances wherever you are in the world</p>
+           </articule>
+           <articule class="feature__box">
+               <span></span>
+               <h1>Simple Budgeting</h1>
+               <p>See exactly where your money goes each month. Receive notification when you're close to your hitting limits</p>
+           </articule>
+           <articule class="feature__box">
+               <span></span>
+               <h1>Fast Onboarding</h1>
+               <p>We don't do branches. Open your account in minutes online and start taking control of your finances right away</p>
+           </articule>
+           <articule class="feature__box"> 
+               <span></span>
+               <h1>Open API</h1>
+               <p>Manage your savings, investments, pension, and much more from one account. Tracking your money has never been easier</p>
+           </articule>
+        </main>
 </body>
 </html>
