--- a/index.html
+++ b/index.html
@@ -25,28 +25,87 @@
         <main class="features">
            <articule class="feature__main_tittle">
                <h2>Why choose Easy Bank?</h2>
-               <p>We leverage Open Banking to turn your bank account into yout financial hub. COntrol your finances like never before</p>
+               <p>We leverage Open Banking to turn your bank account into yout financial hub. Control your finances like never before</p>
            </articule>
-           <articule class="feature__box">
+           <articule class="feature__box icon-online">
                <span></span>
                <h1>Online Banking</h1>
                <p>Our modern web and mobile applications allow you keep track of your finances wherever you are in the world</p>
            </articule>
-           <articule class="feature__box">
+           <articule class="feature__box icon-budget">
                <span></span>
                <h1>Simple Budgeting</h1>
                <p>See exactly where your money goes each month. Receive notification when you're close to your hitting limits</p>
            </articule>
-           <articule class="feature__box">
+           <articule class="feature__box icon-onboarding">
                <span></span>
                <h1>Fast Onboarding</h1>
                <p>We don't do branches. Open your account in minutes online and start taking control of your finances right away</p>
            </articule>
-           <articule class="feature__box"> 
+           <articule class="feature__box icon-api"> 
                <span></span>
                <h1>Open API</h1>
                <p>Manage your savings, investments, pension, and much more from one account. Tracking your money has never been easier</p>
            </articule>
         </main>
+        <section class="articule">
+            <div>
+                <h3 class="articule-tittle">Latest Articles</h3>
+            </div>
+            <div class="articule__container">
+                <img src="../images/image-currency.jpg" alt="currency">
+                <div class="box-content">
+                    <sub>By Claire Robinson</sub>
+                    <h4>Receive money in any currency with no fees</h4>
+                    <p>The world is getting smaller and we’re becoming more mobile. So why should you be forced to only receive money in a single …</p>
+                </div>
+            </div>
+            <div class="articule__container">
+                <img src="./images/image-restaurant.jpg" alt="restaurant">
+                <div class="box-content">
+                    <sub>By Wilson Hutton</sub>
+                    <h4>Treat yourself without worrying about money</h4>
+                    <p>Our simple budgeting feature allows you to separate out your spending and set realistic limits each month. That means you …</p>
+                </div>
+            </div>
+            <div class="articule__container">
+                <img src="./images/image-plane.jpg" alt="plane" class="img">
+                <div class="box-content">
+                    <sub>By Wilson Hutton</sub>
+                    <h4>Take your Easybank card wherever you go</h4>
+                    <p>We want you to enjoy your travels. This is why we don’t charge any fees on purchases while you’re abroad. We’ll even show you …</p>
+                </div>
+            </div>
+            <div class="articule__container">
+                <img src="./images/image-confetti.jpg" alt="confetti" class="img">
+                <div class="box-content">
+                    <sub>By Claire Robinson</sub>
+                    <h4>Our invite-only Beta accounts are now live!</h4>
+                    <p>After a lot of hard work by the whole team, we’re excited to launch our closed beta. It’s easy to request an invite through the site ...</p>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <span class="logo"></span>
+            <div class="footer__container_icons">
+                <span class="container_icons-fb"></span>
+                <span class="container_icons-yt"></span>
+                <span class="container_icons-tw"></span>
+                <span class="container_icons-pt"></span>
+                <span class="container_icons-in"></span>
+            </div>
+            <div>
+                <ul>
+                    <li>About us</li>
+                    <li>Contact</li>
+                    <li>Blog</li>
+                    <li>Carrers</li>
+                    <li>Support</li>
+                    <li>Privacity Policy</li>
+                </ul>
+            </div>
+            <botton>Request Invite</botton>
+            <span>Easybank. All Rights Reserved</span>
+        </footer>
 </body>
 </html>
